# food_classifier

./: README.md  assignment.md  main.py  pyproject.toml
config/: config.yaml
datamodules/: food_module.py
experiments/: experiments.py
logs/lightning_logs/version_11/: events.out.tfevents.1687473530.CHRIS-PC2.284.0
models/: food_resnet18.py  food_resnet50.py  food_squeezenet.py
models/saved/: squeezenet_trained.pt  squeezenet_trained_ep30.pt
trainer/: food_trainer.py
